--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-uglify": "~0.9.1",
     "load-grunt-tasks": "~3.2.0",
-    "mocha": "~2.2.5",
+    "mocha": "^2.3.4",
     "phantomjs": "1.9.17",
-    "requirejs": "~2.1.19",
     "react": "^0.13.3",
+    "requirejs": "~2.1.19",
     "travis-cov": "*",
     "uglify-save-license": "~0.4.1"
   },
